FINALLY FIXED THE OVERFLOW ISSUE with global main css width styling, added animation and tweaked colors to timeline

--- a/src/main.css
+++ b/src/main.css
@@ -52,3 +52,13 @@ pre {
 br {
     font-family: inherit; /* Inherit font from parent */
 }
+
+html, body, #root {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+/* * {
+    outline: 1px solid red;
+  } */
